--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,7 @@ html {
   font-size: 75px;
   display: flex;
   justify-content: flex-end;
+  align-items: center;
   padding-right: 35px;
   color: white;
 }
